Removed unwanted code and added minor changes